--- a/main.lfm
+++ b/main.lfm
@@ -1,52 +1,51 @@
 object frmMain: TfrmMain
   Left = 329
-  Height = 800
+  Height = 640
   Top = 68
-  Width = 1000
+  Width = 800
   Caption = 'Fractals'
-  ClientHeight = 800
-  ClientWidth = 1000
+  ClientHeight = 640
+  ClientWidth = 800
   Color = clSilver
-  DesignTimePPI = 120
   Menu = MainMenu1
   OnCreate = FormCreate
   OnResize = FormResize
   Position = poScreenCenter
   object pbMain: TPaintBox
-    Left = 40
-    Height = 675
-    Top = 60
-    Width = 770
+    Left = 32
+    Height = 540
+    Top = 48
+    Width = 616
     Anchors = [akTop, akLeft, akRight, akBottom]
     ParentColor = False
   end
   object SpinEdit1: TSpinEdit
-    Left = 839
-    Height = 28
-    Top = 64
-    Width = 119
+    Left = 671
+    Height = 23
+    Top = 51
+    Width = 95
     Anchors = [akTop, akRight]
     OnChange = SpinEdit1Change
     TabOrder = 0
     Visible = False
   end
   object Label1: TLabel
-    Left = 837
-    Height = 20
-    Top = 24
-    Width = 44
+    Left = 671
+    Height = 15
+    Top = 19
+    Width = 34
     Anchors = [akTop, akRight]
     Caption = 'Label1'
     ParentColor = False
     Visible = False
   end
   object cbbBasisLijn: TComboBox
-    Left = 837
-    Height = 28
-    Top = 152
-    Width = 125
+    Left = 670
+    Height = 23
+    Top = 122
+    Width = 100
     Anchors = [akTop, akRight]
-    ItemHeight = 20
+    ItemHeight = 15
     ItemIndex = 0
     Items.Strings = (
       'Vierkant -'
@@ -62,32 +61,32 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label2: TLabel
-    Left = 836
-    Height = 20
-    Top = 112
-    Width = 44
+    Left = 670
+    Height = 15
+    Top = 90
+    Width = 34
     Anchors = [akTop, akRight]
     Caption = 'Label2'
     ParentColor = False
     Visible = False
   end
   object Label3: TLabel
-    Left = 836
-    Height = 20
-    Top = 208
-    Width = 44
+    Left = 670
+    Height = 15
+    Top = 166
+    Width = 34
     Anchors = [akTop, akRight]
     Caption = 'Label3'
     ParentColor = False
     Visible = False
   end
   object cbbModel: TComboBox
-    Left = 837
-    Height = 28
-    Top = 248
-    Width = 125
+    Left = 670
+    Height = 23
+    Top = 198
+    Width = 100
     Anchors = [akTop, akRight]
-    ItemHeight = 20
+    ItemHeight = 15
     ItemIndex = 0
     Items.Strings = (
       '0'
@@ -105,15 +104,16 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label4: TLabel
-    Left = 40
-    Height = 44
-    Top = 8
-    Width = 770
+    Left = 32
+    Height = 35
+    Top = 6
+    Width = 616
     Alignment = taCenter
+    Anchors = [akTop, akLeft, akRight]
     AutoSize = False
     Caption = 'Fractals'
     Font.CharSet = ANSI_CHARSET
-    Font.Height = -20
+    Font.Height = -16
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsBold]
@@ -121,8 +121,8 @@ object frmMain: TfrmMain
     ParentFont = False
   end
   object MainMenu1: TMainMenu
-    Left = 73
-    Top = 208
+    Left = 58
+    Top = 166
     object miFractals: TMenuItem
       Caption = 'Fractals'
       object miBoomH1: TMenuItem
@@ -256,6 +256,16 @@ object frmMain: TfrmMain
         Caption = 'Kale pythagorasboom'
         RadioItem = True
         OnClick = miPythtClick
+      end
+      object miBoomm: TMenuItem
+        AutoCheck = True
+        Caption = 'Boom van Mandelbrot, backtrackmethode'
+        RadioItem = True
+        OnClick = miBoommClick
+      end
+      object miSterfractal: TMenuItem
+        Caption = 'Sterfractal'
+        OnClick = miSterfractalClick
       end
     end
   end
