--- a/main.lfm
+++ b/main.lfm
@@ -1,52 +1,52 @@
 object frmMain: TfrmMain
   Left = 329
-  Height = 640
+  Height = 800
   Top = 68
-  Width = 800
+  Width = 1000
   Caption = 'Fractals'
-  ClientHeight = 640
-  ClientWidth = 800
+  ClientHeight = 800
+  ClientWidth = 1000
   Color = clSilver
+  DesignTimePPI = 120
   Menu = MainMenu1
   OnCreate = FormCreate
   OnResize = FormResize
   Position = poScreenCenter
-  LCLVersion = '3.0.0.3'
   object pbMain: TPaintBox
-    Left = 32
-    Height = 540
-    Top = 48
-    Width = 616
+    Left = 40
+    Height = 715
+    Top = 60
+    Width = 790
     Anchors = [akTop, akLeft, akRight, akBottom]
     ParentColor = False
   end
   object SpinEdit1: TSpinEdit
-    Left = 671
-    Height = 23
-    Top = 51
-    Width = 95
+    Left = 856
+    Height = 28
+    Top = 56
+    Width = 119
     Anchors = [akTop, akRight]
     OnChange = SpinEdit1Change
     TabOrder = 0
     Visible = False
   end
   object Label1: TLabel
-    Left = 671
-    Height = 15
-    Top = 19
-    Width = 34
+    Left = 856
+    Height = 20
+    Top = 16
+    Width = 44
     Anchors = [akTop, akRight]
     Caption = 'Label1'
     ParentColor = False
     Visible = False
   end
   object cbbBasisLijn: TComboBox
-    Left = 670
-    Height = 23
-    Top = 122
-    Width = 100
+    Left = 856
+    Height = 28
+    Top = 144
+    Width = 125
     Anchors = [akTop, akRight]
-    ItemHeight = 15
+    ItemHeight = 20
     ItemIndex = 0
     Items.Strings = (
       'Vierkant -'
@@ -62,32 +62,32 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label2: TLabel
-    Left = 670
-    Height = 15
-    Top = 90
-    Width = 34
+    Left = 856
+    Height = 20
+    Top = 104
+    Width = 44
     Anchors = [akTop, akRight]
     Caption = 'Label2'
     ParentColor = False
     Visible = False
   end
   object Label3: TLabel
-    Left = 670
-    Height = 15
-    Top = 166
-    Width = 34
+    Left = 856
+    Height = 20
+    Top = 200
+    Width = 44
     Anchors = [akTop, akRight]
     Caption = 'Label3'
     ParentColor = False
     Visible = False
   end
   object cbbModel: TComboBox
-    Left = 670
-    Height = 23
-    Top = 198
-    Width = 100
+    Left = 856
+    Height = 28
+    Top = 240
+    Width = 125
     Anchors = [akTop, akRight]
-    ItemHeight = 15
+    ItemHeight = 20
     ItemIndex = 0
     Items.Strings = (
       '0'
@@ -105,16 +105,16 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label4: TLabel
-    Left = 32
-    Height = 35
-    Top = 6
-    Width = 616
+    Left = 40
+    Height = 44
+    Top = 8
+    Width = 790
     Alignment = taCenter
     Anchors = [akTop, akLeft, akRight]
     AutoSize = False
     Caption = 'Fractals'
     Font.CharSet = ANSI_CHARSET
-    Font.Height = -16
+    Font.Height = -20
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsBold]
@@ -122,8 +122,8 @@ object frmMain: TfrmMain
     ParentFont = False
   end
   object MainMenu1: TMainMenu
-    Left = 58
-    Top = 166
+    Left = 73
+    Top = 208
     object miFractals: TMenuItem
       Caption = 'Fractals'
       object miBoomH1: TMenuItem
@@ -265,7 +265,9 @@ object frmMain: TfrmMain
         OnClick = miBoommClick
       end
       object miSterfractal: TMenuItem
+        AutoCheck = True
         Caption = 'Sterfractal'
+        RadioItem = True
         OnClick = miSterfractalClick
       end
       object miStofb: TMenuItem
