--- a/main.lfm
+++ b/main.lfm
@@ -1,52 +1,51 @@
 object frmMain: TfrmMain
   Left = 329
-  Height = 800
+  Height = 640
   Top = 68
-  Width = 1000
+  Width = 800
   Caption = 'Fractals'
-  ClientHeight = 800
-  ClientWidth = 1000
+  ClientHeight = 640
+  ClientWidth = 800
   Color = clSilver
-  DesignTimePPI = 120
   Menu = MainMenu1
   OnCreate = FormCreate
   OnResize = FormResize
   Position = poScreenCenter
   object pbMain: TPaintBox
-    Left = 40
-    Height = 715
-    Top = 60
-    Width = 790
+    Left = 32
+    Height = 572
+    Top = 48
+    Width = 632
     Anchors = [akTop, akLeft, akRight, akBottom]
     ParentColor = False
   end
   object SpinEdit1: TSpinEdit
-    Left = 856
-    Height = 28
-    Top = 56
-    Width = 119
+    Left = 685
+    Height = 23
+    Top = 45
+    Width = 95
     Anchors = [akTop, akRight]
     OnChange = SpinEdit1Change
     TabOrder = 0
     Visible = False
   end
   object Label1: TLabel
-    Left = 856
-    Height = 20
-    Top = 16
-    Width = 44
+    Left = 686
+    Height = 15
+    Top = 13
+    Width = 34
     Anchors = [akTop, akRight]
     Caption = 'Label1'
     ParentColor = False
     Visible = False
   end
   object cbbBasisLijn: TComboBox
-    Left = 856
-    Height = 28
-    Top = 144
-    Width = 125
+    Left = 685
+    Height = 23
+    Top = 115
+    Width = 100
     Anchors = [akTop, akRight]
-    ItemHeight = 20
+    ItemHeight = 15
     ItemIndex = 0
     Items.Strings = (
       'Vierkant -'
@@ -62,32 +61,32 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label2: TLabel
-    Left = 856
-    Height = 20
-    Top = 104
-    Width = 44
+    Left = 686
+    Height = 15
+    Top = 83
+    Width = 34
     Anchors = [akTop, akRight]
     Caption = 'Label2'
     ParentColor = False
     Visible = False
   end
   object Label3: TLabel
-    Left = 856
-    Height = 20
-    Top = 200
-    Width = 44
+    Left = 686
+    Height = 15
+    Top = 160
+    Width = 34
     Anchors = [akTop, akRight]
     Caption = 'Label3'
     ParentColor = False
     Visible = False
   end
   object cbbModel: TComboBox
-    Left = 856
-    Height = 28
-    Top = 240
-    Width = 125
+    Left = 685
+    Height = 23
+    Top = 192
+    Width = 100
     Anchors = [akTop, akRight]
-    ItemHeight = 20
+    ItemHeight = 15
     ItemIndex = 0
     Items.Strings = (
       '0'
@@ -105,16 +104,16 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label4: TLabel
-    Left = 40
-    Height = 44
-    Top = 8
-    Width = 790
+    Left = 32
+    Height = 35
+    Top = 6
+    Width = 632
     Alignment = taCenter
     Anchors = [akTop, akLeft, akRight]
     AutoSize = False
     Caption = 'Fractals'
     Font.CharSet = ANSI_CHARSET
-    Font.Height = -20
+    Font.Height = -16
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsBold]
@@ -122,7 +121,7 @@ object frmMain: TfrmMain
     ParentFont = False
   end
   object Label5: TLabel
-    Left = 670
+    Left = 685
     Height = 15
     Top = 248
     Width = 34
@@ -130,18 +129,18 @@ object frmMain: TfrmMain
     Caption = 'Label5'
   end
   object SpinEdit2: TSpinEdit
-    Left = 672
+    Left = 685
     Height = 23
-    Top = 280
-    Width = 94
+    Top = 296
+    Width = 75
     Anchors = [akTop, akRight]
     OnChange = SpinEdit2Change
     TabOrder = 3
     Value = 100
   end
   object MainMenu1: TMainMenu
-    Left = 56
-    Top = 166
+    Left = 45
+    Top = 133
     object miFractals: TMenuItem
       Caption = 'Fractals'
       object miBoomH1: TMenuItem
@@ -365,6 +364,24 @@ object frmMain: TfrmMain
         Caption = 'Banen van dynamisch systeem'
         RadioItem = True
         OnClick = miWolkClick
+      end
+      object miWolk1: TMenuItem
+        AutoCheck = True
+        Caption = 'Banen van dynamisch systeem 1'
+        RadioItem = True
+        OnClick = miWolk1Click
+      end
+      object miWolk2: TMenuItem
+        AutoCheck = True
+        Caption = 'Banen van dynamisch systeem 2'
+        RadioItem = True
+        OnClick = miWolk2Click
+      end
+      object miKronkelt: TMenuItem
+        AutoCheck = True
+        Caption = 'Kronkellijn, talstelselmethode, kochkruis'
+        RadioItem = True
+        OnClick = miKronkeltClick
       end
     end
   end
