--- a/main.lfm
+++ b/main.lfm
@@ -11,6 +11,7 @@ object frmMain: TfrmMain
   OnCreate = FormCreate
   OnResize = FormResize
   Position = poScreenCenter
+  LCLVersion = '3.0.0.3'
   object pbMain: TPaintBox
     Left = 32
     Height = 572
@@ -27,6 +28,7 @@ object frmMain: TfrmMain
     Anchors = [akTop, akRight]
     OnChange = SpinEdit1Change
     TabOrder = 0
+    Value = 1
     Visible = False
   end
   object Label1: TLabel
@@ -382,6 +384,12 @@ object frmMain: TfrmMain
         Caption = 'Kronkellijn, talstelselmethode, kochkruis'
         RadioItem = True
         OnClick = miKronkeltClick
+      end
+      object miKronkelb: TMenuItem
+        AutoCheck = True
+        Caption = 'Fractal kromme met motief, backtrackmethode'
+        RadioItem = True
+        OnClick = miKronkelbClick
       end
     end
   end
