--- a/main.lfm
+++ b/main.lfm
@@ -1,30 +1,30 @@
 object frmMain: TfrmMain
   Left = 329
-  Height = 640
+  Height = 800
   Top = 68
-  Width = 800
+  Width = 1000
   Caption = 'Fractals'
-  ClientHeight = 640
-  ClientWidth = 800
+  ClientHeight = 800
+  ClientWidth = 1000
   Color = clSilver
+  DesignTimePPI = 120
   Menu = MainMenu1
   OnCreate = FormCreate
   OnResize = FormResize
   Position = poScreenCenter
-  LCLVersion = '3.0.0.3'
   object pbMain: TPaintBox
-    Left = 32
-    Height = 572
-    Top = 48
-    Width = 632
+    Left = 40
+    Height = 756
+    Top = 60
+    Width = 790
     Anchors = [akTop, akLeft, akRight, akBottom]
     ParentColor = False
   end
   object SpinEdit1: TSpinEdit
-    Left = 685
-    Height = 23
-    Top = 45
-    Width = 95
+    Left = 856
+    Height = 28
+    Top = 56
+    Width = 119
     Anchors = [akTop, akRight]
     OnChange = SpinEdit1Change
     TabOrder = 0
@@ -32,22 +32,22 @@ object frmMain: TfrmMain
     Visible = False
   end
   object Label1: TLabel
-    Left = 686
-    Height = 15
-    Top = 13
-    Width = 34
+    Left = 856
+    Height = 20
+    Top = 16
+    Width = 44
     Anchors = [akTop, akRight]
     Caption = 'Label1'
     ParentColor = False
     Visible = False
   end
   object cbbBasisLijn: TComboBox
-    Left = 685
-    Height = 23
-    Top = 115
-    Width = 100
+    Left = 856
+    Height = 28
+    Top = 144
+    Width = 125
     Anchors = [akTop, akRight]
-    ItemHeight = 15
+    ItemHeight = 20
     ItemIndex = 0
     Items.Strings = (
       'Vierkant -'
@@ -63,32 +63,32 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label2: TLabel
-    Left = 686
-    Height = 15
-    Top = 83
-    Width = 34
+    Left = 856
+    Height = 20
+    Top = 104
+    Width = 44
     Anchors = [akTop, akRight]
     Caption = 'Label2'
     ParentColor = False
     Visible = False
   end
   object Label3: TLabel
-    Left = 686
-    Height = 15
-    Top = 160
-    Width = 34
+    Left = 856
+    Height = 20
+    Top = 200
+    Width = 44
     Anchors = [akTop, akRight]
     Caption = 'Label3'
     ParentColor = False
     Visible = False
   end
   object cbbModel: TComboBox
-    Left = 685
-    Height = 23
-    Top = 192
-    Width = 100
+    Left = 856
+    Height = 28
+    Top = 240
+    Width = 125
     Anchors = [akTop, akRight]
-    ItemHeight = 15
+    ItemHeight = 20
     ItemIndex = 0
     Items.Strings = (
       '0'
@@ -106,16 +106,16 @@ object frmMain: TfrmMain
     OnChange = miKronkelClick
   end
   object Label4: TLabel
-    Left = 32
-    Height = 35
-    Top = 6
-    Width = 632
+    Left = 40
+    Height = 44
+    Top = 8
+    Width = 790
     Alignment = taCenter
     Anchors = [akTop, akLeft, akRight]
     AutoSize = False
     Caption = 'Fractals'
     Font.CharSet = ANSI_CHARSET
-    Font.Height = -16
+    Font.Height = -20
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsBold]
@@ -123,26 +123,26 @@ object frmMain: TfrmMain
     ParentFont = False
   end
   object Label5: TLabel
-    Left = 685
-    Height = 15
-    Top = 248
-    Width = 34
+    Left = 855
+    Height = 20
+    Top = 310
+    Width = 44
     Anchors = [akTop, akRight]
     Caption = 'Label5'
   end
   object SpinEdit2: TSpinEdit
-    Left = 685
-    Height = 23
-    Top = 296
-    Width = 75
+    Left = 856
+    Height = 28
+    Top = 370
+    Width = 94
     Anchors = [akTop, akRight]
     OnChange = SpinEdit2Change
     TabOrder = 3
     Value = 100
   end
   object MainMenu1: TMainMenu
-    Left = 45
-    Top = 133
+    Left = 56
+    Top = 166
     object miFractals: TMenuItem
       Caption = 'Fractals'
       object miBoomH1: TMenuItem
